z-index added to mobile menu to avoid to hide it

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,6 +7,7 @@ nav{
     justify-content: space-between;
     border-bottom: 1px solid var(--grayis-blue);
     position: relative;
+    z-index: 100;
 }
 .menu{
     display: none;
